# crewai-LL-series

./: .gitignore  CrewAI Lightning Lesson Series.md  README.md
.cursor/agents/: backend-eng.md  frontend-eng.md  integration-end.md  personas.md  project-mgr.md  qa-eng.md  system-arch.md
.cursor/prompts/: prompt-phase-1
.cursor/rules/: aamad-core.mdc  adapter-crewai.mdc  adapter-registry.mdc  development-workflow.mdc  epics-index.mdc
.cursor/templates/: mr-template.md  prd-template.md  sad-template.md
LL1/: .gitignore  README.md  env.example  requirements.txt  run_demo.py
LL1/docs/: backend.md  demo-strategy.md  test-strategy.md
LL1/src/: __init__.py  crew_only.py  demo_runner.py  flow_only.py  hybrid_flow.py  mini_crew.py  state.py
LL2/: README.md  custom_prompts.json  pyproject.toml  requirements.txt  run_demo.py  setup.py
LL2/config/: agents.yaml  crews.yaml  tasks.yaml  yaml-configuration-guide.md
LL2/prompts/: creative_marketing_agent.txt  custom_prompts.json  legal_compliance_agent.txt  technical_lead_agent.txt
LL2/src/: __init__.py  agents.py  config_loader.py  demo_runner.py
LL3/: README.md  requirements.txt  run_demo.py
LL3/config/: agents.yaml  tasks.yaml
LL3/prompts/: basic_memory_agent.txt  blue_co_support.txt  custom_prompts.json  learning_agent.txt  optimized_memory_agent.txt  placeholder.txt  red_co_support.txt
LL3/src/: demo1_memory_comparison.py  demo2_learning_agents.py  placeholder.py  quick_memory_inspect.py  reset_memories.py  storage_location.py
LL3/storage/: .crewai_user.json
LL3/templates/: basic_memory_chat.html  blue_co_chat.html  learning_chat.html  optimized_memory_chat.html  red_co_chat.html
LL4/: .gitignore  README.md  run_demo.py  test_webhook_diagnosis.py
LL4/config/: agents.yaml
LL4/demo2-backend/: package-lock.json  package.json  server.js
LL4/demo2-deployment/: README.md  pyproject.toml  requirements-lock.txt  requirements.txt  tasks.yaml  test_crew.py
LL4/demo2-deployment/src/: crew.py
LL4/demo2-frontend/: package-lock.json  package.json
LL4/demo2-frontend/public/: index.html
LL4/demo2-frontend/src/: TechCorpCrewApp.css  TechCorpCrewApp.js  index.js
LL4/demo2-studio-crew/: README.md  pyproject.toml
LL4/demo2-studio-crew/src/techcorp_content_creation_pipeline/: crew.py  main.py
LL4/demo2-studio-crew/src/techcorp_content_creation_pipeline/config/: agents.yaml  research_topic_analysis.json  tasks.yaml
LL4/src/: demo1_opensource_hitl.py  demo2_amp_deploy_first.py  demo2_enterprise_webhook_hitl.py  webhook_server.py
LL4/templates/: demo1_ui.html  demo2_ui.html  index.html
LL5/: README.md  requirements.txt
LL5/demos/segment2/: README.md  pyproject.toml  run_tracing_demo.py
LL5/demos/segment2/src/crewai_observability_demo/: crew.py  main.py
LL5/demos/segment2/src/crewai_observability_demo/config/: agents.yaml  tasks.yaml
LL5/demos/segment3/: README.md  docker-compose.metrics.yml  otel-collector-config.yaml  prometheus.yml  run_metrics_demo.py  telemetry.py  tempo.yaml
LL5/demos/segment3/grafana/dashboards/: ll5-observability.json
LL5/demos/segment3/grafana/provisioning/dashboards/: dashboards.yml
LL5/demos/segment3/grafana/provisioning/datasources/: datasources.yml
LL5/project-context/: LL5-demo-plan.md  LL5-goal.md  LL5-slides.md  observability.md  performance.md  slides-workflow.md
