[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo2-enterprise-webhook-hitl"
version = "1.0.0"
description = "Demo 2: Enterprise Webhook HITL - Multi-agent content pipeline with human gate approvals"
authors = [
    {name = "CrewAI Demo", email = "demo@crewai.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "crewai>=0.80.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/crewai/demo2-enterprise-webhook-hitl"
Repository = "https://github.com/crewai/demo2-enterprise-webhook-hitl"
Issues = "https://github.com/crewai/demo2-enterprise-webhook-hitl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["test*", "tests*", "venv*", "__pycache__*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
