[project]
name = "techcorp_content_creation_pipeline"
version = "0.1.0"
description = "techcorp_content_creation_pipeline using crewAI"
authors = [{ name = "Carmelo Iaria", email = "carmelo@synapticai.consulting" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.2.0",
    "jambo",
]

[project.scripts]
techcorp_content_creation_pipeline = "techcorp_content_creation_pipeline.main:run"
run_crew = "techcorp_content_creation_pipeline.main:run"
train = "techcorp_content_creation_pipeline.main:train"
replay = "techcorp_content_creation_pipeline.main:replay"
test = "techcorp_content_creation_pipeline.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
