[project]
name = "crewai_observability_demo"
version = "0.1.0"
description = "crewai_observability_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.0"
]

[project.scripts]
crewai_observability_demo = "crewai_observability_demo.main:run"
run_crew = "crewai_observability_demo.main:run"
train = "crewai_observability_demo.main:train"
replay = "crewai_observability_demo.main:replay"
test = "crewai_observability_demo.main:test"
run_with_trigger = "crewai_observability_demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
